@@ -23,4 +23,4 @@ Suggests:
     codetools
 LazyData: yes
 ByteCompile: yes
-Version: 1.9
+Version: 1.10
